[package]
name = "lakey-evrf"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pointing to commit hash because latest crate version (v5.0.0) fails to build with `features = ["yoloproofs"]`.
bulletproofs = { git = "https://github.com/zkcrypto/bulletproofs.git", rev = "29c9e3c94856cbb4d8f8a65cb43660b2433cb1bb", features = ["yoloproofs"] }
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "rand_core", "serde"] }
merlin = "3.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3"
sha3 = "0.10.8"
